finished flex boxes

--- a/medial-queries1/index.html
+++ b/medial-queries1/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <div class="container">
-      <div class="a"></div>
-      <div class="b"></div>
-      <div class="c"></div>
+      <div class="a"><strong>A</strong></div>
+      <div class="b"><strong>B</strong></div>
+      <div class="c"><strong>C</strong></div>
     </div>
   </body>
 </html>
